<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item  android:id="@+id/camera"     android:icon="@drawable/camera"    app:showAsAction="@string/action"   android:title="@string/camera" />
    <item  android:id="@+id/file"     android:icon="@drawable/file"    app:showAsAction="@string/action"   android:title="@string/newfile" />
    <item  android:id="@+id/newm"     android:icon="@drawable/newm"    app:showAsAction="@string/file"    android:title="@string/New" />
    <item  android:id="@+id/save"     android:icon="@drawable/save"    app:showAsAction="@string/file"   android:title="@string/save" />
    <item  android:id="@+id/delete"   android:icon="@drawable/delete"  app:showAsAction="@string/file"    android:title="@string/Delete" />
    <item  android:id="@+id/browse"   android:icon="@drawable/browse"   app:showAsAction="@string/file"   android:title="@string/Browse" />
    <item  android:id="@+id/question"   android:icon="@drawable/question"   app:showAsAction="@string/action"   android:title="@string/question" />
    <item  android:id="@+id/download"  android:icon="@drawable/download" app:showAsAction="@string/action"   android:title="@string/download" />
    <item  android:id="@+id/receive"  android:icon="@drawable/resp"       app:showAsAction="@string/file"   android:title="@string/receive" />
    <item  android:id="@+id/setting"  android:icon="@drawable/setting"   app:showAsAction="@string/action"   android:title="@string/setting" />
    <item  android:id="@+id/exit"     android:icon="@drawable/exit"      app:showAsAction="@string/file"   android:title="@string/Exit" />

</menu>